<resources>
    <string name="app_name">Prioritize</string>
    <string name="name_of_task">Name of Task</string>
    <string name="description_of_task">Description of Task</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="priority_number">Priority Number</string>
    <string name="due_date">Due Date</string>
    <string name="smart_sort">Smart Sort</string>
    <string name="sort_by">Sort by:</string>
    <string name="Priority">Priority</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="add_task">Add Task</string>
    <string name="go_back_to_home">go back to Home</string>
</resources>
