<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/name_of_task"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_of_task"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="5" />

    <TextView
        android:id="@+id/tvPriorityNum"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/priority_number"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAddTask"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/ivHome"
        android:backgroundTint="#6495ED"
        android:text="@string/add_task"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPriorityNum"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/radio_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/radio_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_5" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/ivHome"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#6495ED"
        android:contentDescription="@string/go_back_to_home"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAddTask"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="408dp"
        android:layout_toEndOf="@+id/tvPriorityNum"
        android:ems="10"
        android:hint="@string/due_date"
        android:linksClickable="false"
        android:textAlignment="center"
        android:textSize="24sp" />

</RelativeLayout>